# alibabot

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  render.yaml  requirements.txt  todo-items.md
.github/workflows/: nightly-scrape.yml
alibabot/: cli.py  config_loader.py  models.py  runner.py  storage.py
alibabot/normalizers/: core.py  fin_system.py  shopify_options.py  values.py  viral_name.py
alibabot/scrapers/: base.py  prestashop.py  registry.py  shopify.py
alibabot/utils/: http.py
api/: auth.py  main.py  schemas.py
api/routes/: admin.py  catalog.py  snapshots.py
api/services/: catalog_service.py  diff_service.py  snapshots_service.py
config/: suppliers.yaml
cron/: nightly_scrape.py
db/: schema.sql
docs/: index.html
frontend/: README.md  index.html
