[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alibabot"
version = "0.1.0"
description = "Catalogue multi-fournisseurs de matériel de surf pour NOTOX"
requires-python = ">=3.11"

[project.scripts]
alibabot = "alibabot.cli:app"

[tool.setuptools]
packages = ["alibabot", "alibabot.scrapers", "alibabot.utils", "cron", "api", "api.routes", "api.services"]

[tool.ruff]
line-length = 100
target-version = "py311"
